# cryptofuzz

./: .gitignore  .gitmodules  Makefile  Makefile-standalone  README.md  TODO.md  _z3.h  bignum_fuzzer_importer.cpp  botan_importer.cpp  build-all.sh  builtin_tests_importer.cpp  components.cpp  config.h  create_ops.cpp  crypto.cpp  datasource.cpp  driver.cpp  driver.h  ecc_diff_fuzzer_exporter.cpp  ecc_diff_fuzzer_importer.cpp  entry.cpp  executor.cpp  executor.h  expmod.cpp  expmod.h  funding.json  gen_repository.py  generate_corpus.cpp  generate_dict.cpp  import_wycheproof.sh  libfuzzer_emulator.cpp  mutator.cpp  mutatorpool.cpp  mutatorpool.h  numbers.cpp  numbers.h  openssl_importer.cpp  operation.cpp  options.cpp  repository.cpp  (+9 more)
bc-csharp/: Cryptofuzz.csproj  Program.cs
d/: cryptofuzz.d
docs/: bc.md  bearssl.md  bignumber.js.md  blst.md  bn.js.md  botan.md  bouncycastle.md  building.md  chia_bls.md  cifra.md  constantine.md  crypto-js.md  cryptopp.md  d.md  elliptic.md  golang.md  goldilocks.md  google-integers.md  intx.md  java.md  jsbn.md  k256.md  kilic-bls12-381.md  libdivide.md  libecc.md  libff.md  libfuzzer-js.md  libgcrypt.md  libgmp.md  libsodium.md  libtomcrypt.md  libtommath.md  linux.md  mbedtls.md  mcl.md  micro-ecc.md  microsoft-calculator.md  monocypher.md  mpdecimal.md  nettle.md  (+28 more)
dotnet/: Program.cs
include/cryptofuzz/: bignum_fuzzer_importer.h  botan_importer.h  builtin_tests_importer.h  components.h  crypto.h  ecc_diff_fuzzer_exporter.h  ecc_diff_fuzzer_importer.h  generic.h  module.h  openssl_importer.h  operations.h  options.h  repository.h  util.h  util_hexdump.h  wycheproof.h
modules/: link.sh
modules/ada/: cryptofuzz.adb
modules/aleo/: Cargo.toml  Makefile  Makefile-i386  module.cpp  module.h
modules/aleo/src/: lib.rs
modules/arkworks-algebra/: Cargo.toml  Makefile  Makefile-i386  module.cpp  module.h
modules/arkworks-algebra/0.4.0/: lib.rs
modules/arkworks-algebra/src/: lib.rs
modules/aurora-engine-modexp/: Cargo.toml  Makefile  Makefile-i386  module.cpp  module.h
modules/aurora-engine-modexp/src/: lib.rs
modules/bc/: Makefile  module.cpp  module.h
modules/bearssl/: Makefile  module.cpp  module.h
modules/beast/: Makefile  module.cpp  module.h
modules/bignumber.js/: Makefile  generate_calc_ops.cpp  harness.js  header.js  module.cpp  module.h
modules/bitcoin/: Makefile  getfiles.sh  module.cpp  module.h  uint256.cpp
modules/blst/: Makefile  module.cpp  module.h
modules/bn.js/: Makefile  generate_calc_ops.cpp  harness.js  module.cpp  module.h
modules/boost/: Makefile  module.cpp  module.h
modules/botan/: Makefile  Makefile-oracle  README.md  bn_helper.cpp  bn_helper.h  bn_ops.cpp  bn_ops.h  cipher_string_lut.h  curve_string_lut.h  digest_string_lut.h  module.cpp  module.h  test_strings.cpp
modules/bouncycastle/: CryptofuzzBouncyCastleHarness.java  Makefile  module.cpp  module.h
modules/chia_bls/: Makefile  README.md  module.cpp  module.h
modules/cifra/: Makefile  module.cpp  module.h
modules/circl/: cryptofuzz.go  module.cpp  module.h
modules/cloudflare-bn256/: cryptofuzz.go  module.cpp  module.h
modules/constantine/: Makefile  Makefile-i386  constantine_harness.nim  cryptofuzz.go  module.cpp  module.h
modules/cppcrypto/: Makefile  module.cpp  module.h
modules/cpu/: Makefile  cpu.asm  module.cpp  module.h
modules/crypto-browserify/: Makefile  harness.js  module.cpp  module.h
modules/crypto-js/: Makefile  generate_ids.cpp  harness.js  header.js  module.cpp  module.h
modules/cryptopp/: Makefile  bn_ops.cpp  bn_ops.h  module.cpp  module.h
modules/d/: Makefile  cryptofuzz.d  module.cpp  module.h
modules/decred/: cryptofuzz.go  module.cpp  module.h
modules/decred-uint256/: cryptofuzz.go  generate_ids.cpp  module.cpp  module.h
modules/elliptic/: Makefile  generate_ids.cpp  harness.js  header.js  module.cpp  module.h
modules/evercrypt/: Makefile  module.cpp  module.h
modules/faheel-bigint/: Makefile  module.cpp  module.h
modules/ff/: Cargo.toml  Makefile  module.cpp  module.h
modules/geth/: Makefile  cryptofuzz.go  module.cpp  module.h
modules/gnark-bn254/: cryptofuzz.go  module.cpp  module.h
modules/gnark-google-cloudflare/: Makefile  cryptofuzz.go  generate_ids.cpp  ids.go  module.cpp  module.h
modules/golang/: Makefile  cryptofuzz.go  generate_ids.cpp  module.cpp  module.h
modules/goldilocks/: Makefile  Makefile-avx512  module.cpp  module.h
modules/google-bn256/: cryptofuzz.go  module.cpp  module.h
modules/google-integers/: Makefile  module.cpp  module.h
modules/holiman-uint256/: cryptofuzz.go  module.cpp  module.h
modules/intx/: Makefile  module.cpp  module.h
modules/java/: .gitignore  CryptofuzzJavaHarness.java  Makefile  Makefile-OSS-Fuzz  module.cpp  module.h
modules/jsbn/: Makefile  generate_calc_ops.cpp  harness.js  header.js  module.cpp  module.h
modules/k256/: Cargo.toml  Makefile  module.cpp  module.h
modules/kilic-bls12-381/: Makefile  cryptofuzz.go  generate_ids.cpp  module.cpp  module.h
modules/kryptology/: cryptofuzz.go  module.cpp  module.h
modules/libdivide/: Makefile  module.cpp  module.h
modules/libecc/: Makefile  module.cpp  module.h
modules/libff/: Makefile-alt_bn128  Makefile-bls12-381  module.cpp  module.h
modules/libgcrypt/: Makefile  bn_ops.cpp  bn_ops.h  module.cpp  module.h
modules/libgmp/: Makefile  Makefile-mini-gmp  bn_ops.cpp  bn_ops.h  module.cpp  module.h
modules/libsodium/: Makefile  module.cpp  module.h
modules/libtomcrypt/: Makefile  module.cpp  module.h
modules/libtommath/: Makefile  bn_ops.cpp  bn_ops.h  module.cpp  module.h
modules/num-bigint/: Cargo.toml  Makefile  Makefile.i386  module.cpp  module.h
modules/num-bigint/src/: lib.rs
modules/ring/: .gitignore  Cargo.toml  Makefile  generate_ids.cpp  module.cpp  module.h
modules/ring/src/: lib.rs
modules/rust-libsecp256k1/: Cargo.toml  Makefile  module.cpp  module.h
modules/rust-libsecp256k1/src/: lib.rs
modules/rustcrypto/: Cargo.toml  Makefile  Makefile.i386  generate_ids.cpp  module.cpp  module.h
modules/rustcrypto/src/: lib.rs
(+339 files in other folders)
