[package]
name = "cryptofuzz-aleo-harness"
version = "0.1.0"
authors = ["Guido Vranken <guidovranken@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
snarkvm-curves = {git="https://github.com/AleoHQ/snarkVM"}
snarkvm-utilities = {git="https://github.com/AleoHQ/snarkVM"}
snarkvm-fields = {git="https://github.com/AleoHQ/snarkVM"}
libc = "0.2.0"
