[package]
name = "ring-cryptofuzz"
version = "0.1.0"
authors = ["Alexandre Rebert <alexandre.rebert@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
hex-serde = "0.1"
libc = "0.2.0"
num-bigint = "0.4.0"
p256 = { version = "0.7.2", features = ["zeroize", "arithmetic"]}

[dev-dependencies]
rand_core = { version = "0.5.1", features = ["getrandom"]}
